// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component Button - test Button Primary - snapshot 1`] = `
<div
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  colorScheme="system"
  effect="clear"
  focusable={true}
  interactive={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 18,
        "flex": 1,
        "justifyContent": "center",
        "minWidth": 160,
        "paddingHorizontal": 20,
        "paddingVertical": 14,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 10,
          "width": 0,
        },
        "shadowOpacity": 0.35,
        "shadowRadius": 16,
      },
      false,
    ]
  }
  tintColor="#18bd18"
>
  <Text
    style={
      [
        {
          "color": "white",
          "fontSize": 18,
          "fontWeight": "600",
        },
        undefined,
      ]
    }
  >
    Primary button
  </Text>
</div>
`;

exports[`Component Button - test Button Secondary - snapshot 1`] = `
<div
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  colorScheme="system"
  effect="clear"
  focusable={true}
  interactive={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 18,
        "flex": 1,
        "justifyContent": "center",
        "minWidth": 160,
        "paddingHorizontal": 20,
        "paddingVertical": 14,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 10,
          "width": 0,
        },
        "shadowOpacity": 0.35,
        "shadowRadius": 16,
      },
      false,
    ]
  }
  tintColor="#1F1F1F"
>
  <Text
    style={
      [
        {
          "color": "white",
          "fontSize": 18,
          "fontWeight": "600",
        },
        undefined,
      ]
    }
  >
    Secondary button
  </Text>
</div>
`;
